--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
          <div id="settingsModal" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-             <h2>Change your settings here</h2>
+             <h1>Change your settings here</h1>
              <div class="onoffswitch">
                  <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
                  <label class="onoffswitch-label" for="myonoffswitch">
@@ -83,6 +83,8 @@
          </div>
 
          <button id="add-player" type="button" value="add-player" onclick="window.open('minigame.html')"> </button>
+         <button id="add-link" type="button" value="add-link" onclick="window.open('addlink.html')"> </button>
+
 
        </div>
 
@@ -100,7 +102,7 @@
           <div id="player-clicks-explanation" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-               <h2>My clicks</h2>
+               <h1>My clicks</h1>
                <p>You have a limited amount of clicks you can use. Use your clicks to give life-force to others, to invite new players to Common, or to make new connections with existing players. Clicks regenerate over time.</p>
             </div>
           </div>
@@ -108,7 +110,7 @@
           <div id="node-score-me-explanation" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-               <h2>My life-force</h2>
+               <h1>My life-force</h1>
                <p>Through the relentless pressure of time and the natural decay of the universe, you will lose life-force. Want it back? Life force is generated through reinforcing connections, building new connections with existing memebers, and inviting new players to your Common. </p>
             </div>
           </div>
@@ -116,7 +118,7 @@
           <div id="decay-rate-explanation" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-               <h2>Common decay rate</h2>
+               <h1>Common decay rate</h1>
                <p>The Common decay rate is related to the activity of the members. Forgotten Commons will decay quickly, disintegrating into the nothingness that awaits us all.</p>
             </div>
           </div>
@@ -124,7 +126,7 @@
           <div id="status-explanation" class="modal">
            <div class="modal-content">
              <span class="close">&times;</span>
-               <h2>Common status</h2>
+               <h1>Common status</h1>
                <p>Common status is where all things are known to you. Below is a feed of all the events happening over time.</p>
             </div>
           </div>
