--- a/public/minigamewin.html
+++ b/public/minigamewin.html
@@ -57,6 +57,7 @@
             </div>
           </div>
         </div>
+     <script src="js/globals.js" type="text/javascript"></script>
      <script src="js/db.js" type="text/javascript"></script>
      <script src="js/minigamewin.js" type="text/javascript"></script>
 
